--- a/web/index.html
+++ b/web/index.html
@@ -13,6 +13,7 @@
   <link rel="canonical" href="https://bankanp.com/">
 
   <!-- iOS meta tags & icons -->
+   <meta name="mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="apple-mobile-web-app-title" content="Bank ANP">
